20_Netpol/app09-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app09-deploy 
  namespace: prdstore-ns
  labels:
    app: store-app
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      pod: app09-pod
  template:
    metadata:
      labels:
        pod: app09-pod
        tier: backend
    spec:
      containers:
      - name: store-app
        image: node:21-alpine
        command: ['sh', '-c', "sleep 3000"]
        ports:
        - containerPort: 3000
