20_Netpol/db09-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db09-deploy 
  namespace: prdstore-ns
  labels: 
    app: store-app
    tier: database
spec:
  replicas: 2
  selector:
    matchLabels:
      pod: db09-pod
  template:
    metadata:
      labels:
        pod: db09-pod
        tier: database
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
