20_Netpol/web09-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web09-deploy
  namespace: prdstore-ns
  labels:
    app: store-app
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      pod: web09-pod
  template:
    metadata:
      labels:
        pod: web09-pod
        tier: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:1.21-alpine
        ports:
        - containerPort: 80
